[package]
name = "feishu-project-client"
version = "1.0.0"
description = "飞书项目管理桌面客户端"
authors = ["前端 W"]
edition = "2021"

[lib]
name = "feishu_project_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
